# RK3588-crowd-detection-system

./: CMakeLists.txt  LICENSE  README.md
backend/: main.py
include/: RGA_processor.h  camera.h  detector.h  display.h  event_analysis.h  post_processor.h  reporter.h  rtsp_streamer.h  streamer.h  sys_monitor.h  tracker_adapter.h
src/: RGA_processor.c  camera.c  detector.c  display.cpp  event_analysis.cpp  main.cpp  post_processor.c  reporter.c  rtsp_streamer.cpp  streamer.cpp  sys_monitor.c  tracker_adapter.cpp
tools/: open_recoder_rtsp.bat  open_rtsp.bat  run.bat
